// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> Should render <Plus /> correctly 1`] = `
<div>
  <svg
    height="20px"
    viewBox="0 0 26 26"
    width="20px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18.121 11.72h-3.84V7.879a1.28 1.28 0 0 0-2.561 0v3.84H7.879a1.28 1.28 0 0 0 0 2.561h3.84v3.841a1.28 1.28 0 0 0 2.561 0v-3.84h3.841a1.28 1.28 0 0 0 0-2.561zm5.121 7.682a3.845 3.845 0 0 1-3.84 3.84H6.598a3.845 3.845 0 0 1-3.84-3.84V6.598a3.845 3.845 0 0 1 3.84-3.84h12.804a3.845 3.845 0 0 1 3.84 3.84v12.804zM19.402.197H6.598A6.409 6.409 0 0 0 .197 6.598v12.804a6.409 6.409 0 0 0 6.401 6.401h12.804a6.409 6.409 0 0 0 6.401-6.401V6.598A6.409 6.409 0 0 0 19.402.197z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should render <Search /> correctly 1`] = `
<div>
  <svg
    height="20px"
    viewBox="0 0 26 26"
    width="20px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11.583 20.083c-4.687 0-8.5-3.812-8.5-8.5 0-4.687 3.813-8.5 8.5-8.5 4.688 0 8.5 3.813 8.5 8.5 0 4.688-3.812 8.5-8.5 8.5m13.752 3.249l-4.81-4.811a11.265 11.265 0 0 0 2.391-6.938C22.916 5.334 17.832.25 11.583.25 5.334.25.25 5.334.25 11.583c0 6.25 5.084 11.334 11.333 11.334 2.615 0 5.02-.9 6.937-2.392l4.811 4.81a1.413 1.413 0 0 0 2.004 0 1.415 1.415 0 0 0 0-2.003"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<Icon /> Should render <Trash /> correctly 1`] = `
<div>
  <svg
    height="20px"
    viewBox="0 0 16 18"
    width="20px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 15c0 .551-.448 1-1 1H5c-.552 0-1-.449-1-1V6h8v9zM8 2c1.103 0 2 .897 2 2H6c0-1.103.897-2 2-2zm7 2h-3c0-2.206-1.794-4-4-4S4 1.794 4 4H1a1 1 0 1 0 0 2h1v9c0 1.654 1.346 3 3 3h6c1.654 0 3-1.346 3-3V6h1a1 1 0 1 0 0-2z"
      fill="currentColor"
    />
  </svg>
</div>
`;
